--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Document</title>
+  <title>About Me</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gentium+Book+Basic' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <header>
+    <div class="container">
+      <span>Hi, I'm</span>
+      <h1>Steve Holt!</h1>
+      <a href="#" class="btn">Press Now</a>
+    </div>
+  </header>
+  <section>
+      <div class="container">
+        <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+          <h2>Introduction</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
+      </div>
+  </section>
+  <section>
+    <div class="container">
+      <div>
+      <h2>Where I'm From</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
+        </p>
+      </div>
+    <img src="mitten.png" alt="">
+    </div>
+  </section>
+  <section>
+    <!-- just image for now -->
+  </section>
+  <footer>
+    <div class="container">
+      <ul>
+        <li><a href="#">Github</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+    </div>
+  </footer>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
