--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <div class="container">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+      </ul>
+    </div>
+  </nav>
   <header>
     <div class="container">
       <span>Hi, I'm</span>
