restore some broekn stuff

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="mitten.png" alt="">
     </div>
   </section>
-  <section>
+  <section class="tennis">
     <!-- just image for now -->
   </section>
   <footer>
