fixing more stuff

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
       </div>
   </section>
-  <section>
+  <section class="origins">
     <div class="container">
       <div>
       <h2>Where I'm From</h2>
