change text + size

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </div>
   </nav>
     <div class="container">
-      <span>Hi, I'm</span>
-      <h1>Steve Holt!</h1>
+      <h1>Web Development</h1>
       <a href="#" class="btn">Press Now</a>
     </div>
   </header>
