--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <nav>
     <div class="container">
       <ul>
+        <li><img src="https://s3.amazonaws.com/codecademy-content/projects/2/birdman/menu.svg" alt=""></li>
+        <li><h1>Adam Nawrocki</h1></li>
+      </ul>
+
+
+      <ul>
         <li>Home</li>
         <li>About</li>
         <li>Portfolio</li>
@@ -23,7 +29,7 @@
       <a href="#" class="btn">Press Now</a>
     </div>
   </header>
-  <section>
+  <section class="intro">
       <div class="container">
         <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
           <h2>Introduction</h2>
