--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
   <header>
   <nav>
     <div class="container">
-      <ul>
-        <li><img src="https://s3.amazonaws.com/codecademy-content/projects/2/birdman/menu.svg" alt=""></li>
-        <li><h1>Adam Nawrocki</h1></li>
-      </ul>
-
-
+      <img src="https://s3.amazonaws.com/codecademy-content/projects/2/birdman/menu.svg" alt="">
+        <h1>Adam Nawrocki</h1>
       <ul>
         <li>Home</li>
         <li>About</li>
@@ -25,7 +21,7 @@
     </div>
   </nav>
     <div class="container">
-      <h1>Web Development</h1>
+      <h2>Web Development</h2>
       <a href="#" class="btn">Press Now</a>
     </div>
   </header>
