--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
   <nav>
     <div class="container">
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/2/birdman/menu.svg" alt="">
+      <img src="https://s3.amazonaws.com/codecademy-content/projects/2/milford-school/menu.svg" alt="">
         <h1>Adam Nawrocki</h1>
       <ul>
         <li>Home</li>
@@ -21,7 +21,7 @@
     </div>
   </nav>
     <div class="container">
-      <h2>Web Development</h2>
+      <h2>Development</h2>
       <a href="#" class="btn">Press Now</a>
     </div>
   </header>
