--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </nav>
     <div class="container">
-      <h2>Development</h2>
+      <h2>Werb Developer</h2>
       <a href="#" class="btn">Press Now</a>
     </div>
   </header>
