--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <img src="https://s3.amazonaws.com/codecademy-content/projects/2/milford-school/menu.svg" alt="">
         <h1>Adam Nawrocki</h1>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </div>
   </nav>
