take out js for now

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </nav>
     <div class="container">
       <h2>Werb Developer</h2>
-      <a href="#" class="btn">Press Now</a>
+      <a href="portfolio.html" class="btn">Portfolio</a>
     </div>
   </header>
   <section class="intro">
@@ -54,7 +54,5 @@
       </ul>
     </div>
   </footer>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
