need some js for nav

--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@
       </ul>
     </div>
   </footer>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
