--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
         </p>
       </div>
-    <img src="mitten.png" alt="">
+    <img src="images/mitten.png" alt="">
     </div>
   </section>
   <section class="tennis">
