grid code for intro

--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
   </header>
   <section class="intro">
       <div class="container">
-        <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+        <div class="row">
+          <div class="col-4">
+            <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+
+          </div>
+          <div class="col-8">
           <h2>Introduction</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
+
+          </div>
+        </div>
       </div>
   </section>
   <section class="origins">
