--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
   </section>
-  <section class="origins">
+  <!-- <section class="origins">
     <div class="container">
       <div>
       <h2>Where I'm From</h2>
@@ -50,7 +50,7 @@
       </div>
     <img src="images/mitten.png" alt="">
     </div>
-  </section>
+  </section> -->
   <section class="tennis">
     <!-- just image for now -->
   </section>
