use grid for origins section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
   </section>
   <section class="origins">
     <div class="container">
-      <div>
-      <h2>Where I'm From</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
-        </p>
+      <div class="row">
+      <div class="col-8">
+        <h2>Where I'm From</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
+          </p>
       </div>
-    <img src="images/mitten.png" alt="">
+    <div class="col-4">
+      <img src="images/mitten.png" alt="">
+    </div>
+      </div>
     </div>
   </section>
   <section class="tennis">
