making stuff more semantic

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <section class="intro">
         <div class="container">
-            <div class="row">
+            <div class="author-intro">
                 <div class="col-4">
                     <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
                 </div>
@@ -42,7 +42,7 @@
     </section>
     <section class="origins">
         <div class="container">
-            <div class="row">
+            <div class="author-location">
                 <div class="col-8">
                     <h2>Where I'm From</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
