--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <section class="intro">
         <div class="container">
             <div class="author-intro">
-                <div class="col-4">
+                <div class="intro-image">
                     <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
                 </div>
-                <div class="col-8">
+                <div class="intro-text">
                     <h2>Introduction</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
                 </div>
@@ -43,12 +43,12 @@
     <section class="origins">
         <div class="container">
             <div class="author-location">
-                <div class="col-8">
+                <div class="location-text">
                     <h2>Where I'm From</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
                     </p>
                 </div>
-                <div class="col-4">
+                <div class="location-image">
                     <img src="images/mitten.png" alt="">
                 </div>
             </div>
