--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </section>
-    <section class="origins">
+    <section class="location">
         <div class="container">
             <div class="author-location">
                 <div class="location-text">
