--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
         <nav>
-            <div class="container">
+            <div class="wrapper">
                 <img src="https://s3.amazonaws.com/codecademy-content/projects/2/milford-school/menu.svg" alt="">
                 <h1>Adam Nawrocki</h1>
                 <ul>
@@ -22,13 +22,13 @@
             </div>
         </nav>
     <header>
-        <div class="container">
+        <div class="wrapper">
             <h2>Werb Developer</h2>
             <a href="portfolio.html" class="btn">Portfolio</a>
         </div>
     </header>
     <section class="intro">
-        <div class="container">
+        <div class="wrapper">
             <div class="author-intro">
                 <div class="intro-image">
                     <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
@@ -41,7 +41,7 @@
         </div>
     </section>
     <section class="location">
-        <div class="container">
+        <div class="wrapper">
             <div class="author-location">
                 <div class="location-text">
                     <h2>Where I'm From</h2>
@@ -58,7 +58,7 @@
         <!-- just image for now -->
     </section>
     <footer>
-        <div class="container">
+        <div class="wrapper">
             <ul>
                 <li><a href="#">Github</a></li>
                 <li><a href="#">LinkedIn</a></li>
