--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </section>
-    <section class="tennis">
+    <section class="large-image">
         <!-- just image for now -->
     </section>
     <footer>
