best fix so far for non-breaking

--- a/index.html
+++ b/index.html
@@ -27,33 +27,37 @@
             <a href="portfolio.html" class="btn">Portfolio</a>
         </div>
     </header>
-    <section class="intro">
-        <div class="wrapper">
-            <div class="author-intro">
-                <div class="intro-image">
-                    <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+
+        <section class="intro">
+            <div class="wrapper">
+                <div class="author-intro">
+                    <div class="intro-image">
+                        <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+                    </div>
+                    <div class="intro-text">
+                        <h2>Introduction</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
+                    </div>
                 </div>
-                <div class="intro-text">
-                    <h2>Introduction</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
+
+            </div>
+        </section>
+        <section class="location">
+            <div class="wrapper">
+                <div class="author-location">
+                    <div class="location-text">
+                        <h2>Where I'm From</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
+                        </p>
+                    </div>
+                    <div class="location-image">
+                        <img src="images/mitten.png" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="location">
-        <div class="wrapper">
-            <div class="author-location">
-                <div class="location-text">
-                    <h2>Where I'm From</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
-                    </p>
-                </div>
-                <div class="location-image">
-                    <img src="images/mitten.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
+        <div class="clearfix"></div>
+        </section>
+
     <section class="tennis-image">
         <!-- just image for now -->
     </section>
