dont want certain code effecting new page

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,13 @@
                 </ul>
             </div>
         </nav>
+        <section>
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+        </section>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/script.js"></script>
 </body>
