--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>About Me</title>
+    <title>Adam Nawrocki</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans|Gentium+Book+Basic' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
 </head>
