working on project section

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,18 @@
                 </ul>
             </div>
         </nav>
-        <section>
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+        <section class="projects">
+            <h2>Landing Pages</h2>
+            <p>For the most part, these involve taking an incomplete page and getting it to look like a mockup.</p>
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="images/broadway.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="http://placehold.it/1400x750" class="img-responsive" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
