--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         </nav>
         <section class="projects">
             <h2>Landing Pages</h2>
-            <p>For the most part, these involve taking an incomplete page and getting it to look like a mockup.</p>
+            <p>For the most part, these involved taking an incomplete page and getting it to look like a mockup. A fun way to get better at CSS because you can learn a lot from the pre-existing code.</p>
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-6">
