--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="images/broadway.png" class="img-responsive" alt="">
+                        <img src="images/before.png" class="img-responsive before-after" alt="">
                     </div>
                     <div class="col-md-6">
                         <img src="http://placehold.it/1400x750" class="img-responsive" alt="">
