--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="wrapper">
             <h2>Werb Developer</h2>
-            <a href="portfolio.html" class="btn">Portfolio</a>
+            <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
     </header>
 
