--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,8 @@
                         <img src="images/before.png" class="img-responsive broadway-before-after" alt="">
                     </div>
                     <div class="col-md-6">
-                        <img src="http://placehold.it/1400x750" class="img-responsive" alt="">
+                        <a href="http://bcuz.github.io/bestbite2/"><img src="http://placehold.it/1400x750" class="img-responsive" alt=""></a>
+                        <a href="https://github.com/bcuz/bestbite2">See Code</a>
                     </div>
                 </div>
             </div>
