links for porjects

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,15 @@
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="images/before.png" class="img-responsive broadway-before-after" alt="">
+                        <a href="#"><img src="images/before.png" class="img-responsive broadway-before-after" alt=""></a>
+                        <a href="#">See Code</a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="#"><img src="http://placehold.it/1400x750" class="img-responsive" alt=""></a>
+                        <a href="#">See Code</a>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-6">
                         <a href="http://bcuz.github.io/bestbite2/"><img src="http://placehold.it/1400x750" class="img-responsive" alt=""></a>
                         <a href="https://github.com/bcuz/bestbite2">See Code</a>
