make links opoen in new window

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="http://bcuz.github.io/bestbite2/"><img src="http://placehold.it/1400x750" class="img-responsive" alt=""></a>
-                        <a href="https://github.com/bcuz/bestbite2">See Code</a>
+                        <a href="http://bcuz.github.io/bestbite2/"><img src="http://placehold.it/1400x750" class="img-responsive" alt="" target="_blank"></a>
+                        <a href="https://github.com/bcuz/bestbite2" target="_blank">See Code</a>
                     </div>
                 </div>
             </div>
