--- a/portfolio.html
+++ b/portfolio.html
@@ -27,17 +27,17 @@
             <div class="wrapper">
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="#"><img src="images/before.png" class="img-responsive broadway-before-after" alt=""></a>
+                        <a href="#"><img src="images/before-broad.png" class="img-responsive broadway-before-after" alt=""></a>
                         <a href="#">See Code</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#"><img src="http://placehold.it/1400x750" class="img-responsive" alt=""></a>
-                        <a href="#">See Code</a>
+                        <a href="http://bcuz.github.io/kamra/"><img src="images/karma.png" class="img-responsive" alt=""></a>
+                        <a href="https://github.com/bcuz/kamra">See Code</a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="http://bcuz.github.io/bestbite2/"><img src="http://placehold.it/1400x750" class="img-responsive" alt="" target="_blank"></a>
+                        <a href="http://bcuz.github.io/bestbite2/"><img src="images/before-bestbite.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
                         <a href="https://github.com/bcuz/bestbite2" target="_blank">See Code</a>
                     </div>
                 </div>
