add footer to port page

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,15 @@
                 </div>
             </div>
         </section>
+        <footer>
+        <div class="wrapper">
+            <ul>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+    </footer>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/script.js"></script>
 </body>
