--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="wrapper">
                 <img src="https://s3.amazonaws.com/codecademy-content/projects/2/milford-school/menu.svg" alt="">
-                <h1>Adam Nawrocki</h1>
+                <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
