--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
         <footer>
         <div class="wrapper">
             <ul>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                <li><a href="https://github.com/bcuz">Github</a></li>
+                <li><a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0">LinkedIn</a></li>
             </ul>
         </div>
     </footer>
