--- a/portfolio.html
+++ b/portfolio.html
@@ -25,22 +25,22 @@
             <h2>Landing Pages</h2>
             <p>For the most part, these involved taking an incomplete page and getting it to look like a mockup. A fun way to get better at CSS because you can learn a lot from the pre-existing code.</p>
             <div class="wrapper">
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="project-row">
+                    <div class="project">
                         <a href="#"><img src="http://placehold.it/1400x750" alt=""></a>
                         <a href="#">See Code</a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="project">
                         <a href="http://bcuz.github.io/kamra/"><img src="images/karma.png" class="img-responsive" alt=""></a>
                         <a href="https://github.com/bcuz/kamra">See Code</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="project-row">
+                    <div class="project">
                         <a href="http://bcuz.github.io/broadway/"><img src="images/before-broad.png" class="img-responsive broadway-before-after" alt=""></a>
                         <a href="https://github.com/bcuz/broadway">See Code</a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="project">
                         <a href="http://bcuz.github.io/bestbite2/"><img src="images/before-bestbite.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
                         <a href="https://github.com/bcuz/bestbite2" target="_blank">See Code</a>
                     </div>
