dont need wrapper divs for sections

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
     </header>
 
-        <section class="intro">
-            <div class="wrapper">
+        <section class="intro wrapper">
+
                 <div class="author-intro">
                     <div class="intro-image">
                         <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
@@ -40,10 +40,9 @@
                     </div>
                 </div>
 
-            </div>
+
         </section>
-        <section class="location">
-            <div class="wrapper">
+        <section class="location wrapper">
                 <div class="author-location">
                     <div class="location-text">
                         <h2>Where I'm From</h2>
@@ -54,7 +53,6 @@
                         <img src="images/mitten.png" alt="">
                     </div>
                 </div>
-            </div>
         </section>
     <footer>
         <div class="wrapper">
