--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     <header>
         <div class="wrapper">
-            <h2>Werb Developer</h2>
+            <h2>Front End Developer</h2>
             <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
     </header>
