--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="author-intro">
                     <div class="intro-image">
-                        <img src="http://thumbs.dreamstime.com/x/bookshelf-13943998.jpg" alt="">
+                        <img src="images/finalpiece.jpg" alt="">
                     </div>
                     <div class="intro-text">
                         <h2>Introduction</h2>
