change folder name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <nav>
             <div class="wrapper">
-                <img src="images/menu.svg" alt="">
+                <img src="img/menu.svg" alt="">
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -32,7 +32,7 @@
 
                 <div class="author-intro">
                     <div class="intro-image">
-                        <img src="images/puzzle.jpg" alt="">
+                        <img src="img/puzzle.jpg" alt="">
                     </div>
                     <div class="intro-text">
                         <h2>Introduction</h2>
@@ -50,7 +50,7 @@
                         </p>
                     </div>
                     <div class="location-image">
-                        <img src="images/mitten.png" alt="">
+                        <img src="img/mitten.png" alt="">
                     </div>
                 </div>
         </section>
