--- a/portfolio.html
+++ b/portfolio.html
@@ -31,17 +31,17 @@
                         <a href="#">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="http://bcuz.github.io/kamra/"><img src="images/karma.png" class="img-responsive" alt=""></a>
+                        <a href="http://bcuz.github.io/kamra/"><img src="img/karma.png" class="img-responsive" alt=""></a>
                         <a href="https://github.com/bcuz/kamra">See Code</a>
                     </div>
                 </div>
                 <div class="project-row">
                     <div class="project">
-                        <a href="http://bcuz.github.io/broadway/"><img src="images/before-broad.png" class="img-responsive broadway-before-after" alt=""></a>
+                        <a href="http://bcuz.github.io/broadway/"><img src="img/before-broad.png" class="img-responsive broadway-before-after" alt=""></a>
                         <a href="https://github.com/bcuz/broadway">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="http://bcuz.github.io/bestbite2/"><img src="images/before-bestbite.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
+                        <a href="http://bcuz.github.io/bestbite2/"><img src="img/before-bestbite.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
                         <a href="https://github.com/bcuz/bestbite2" target="_blank">See Code</a>
                     </div>
                 </div>
