--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
         <nav>
             <div class="wrapper">
-                <img src="https://s3.amazonaws.com/codecademy-content/projects/2/milford-school/menu.svg" alt="">
+                <img src="img/menu.svg" alt="">
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
