think this will be objectiv section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <img src="img/puzzle.jpg" alt="">
                     </div>
                     <div class="intro-text">
-                        <h2>Introduction</h2>
+                        <h2>Objective</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
                     </div>
                 </div>
