--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
         <nav>
             <div class="wrapper">
                 <img src="img/menu.svg" alt="">
+                <!-- gonna need to find a way to align all this stuff
+                on bigger screens -->
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
