--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <nav>
             <div class="wrapper">
                 <img src="img/menu.svg" alt="">
+                <!-- gonna need to find a way to align all this stuff
+                on bigger screens. Maybe will be able to hide the h1, the unhide stuff
+                That's at least a way.-->
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
