--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 That's at least a way.-->
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
+                    <li><a href="index.html">Adam Nawrocki</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
