--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav>
             <div class="wrapper">
                 <img src="img/menu.svg" alt="">
+                <!-- might be some display none issues somehwere here -->
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
                     <li><a href="index.html">Adam Nawrocki</a></li>
