--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <!-- might be some display none issues somehwere here -->
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
-                    <li><a href="index.html">Adam Nawrocki</a></li>
+                    <li><a href="index.html" class="name">Adam Nawrocki</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
