--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </footer>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
