--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </div>
     </footer>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
