--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <img src="img/puzzle.jpg" alt="">
                     </div>
                     <div class="intro-text">
-                        <h2>Objective</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, adipisci? Aut dolorem possimus sint debitis placeat doloribus qui fuga nihil eligendi voluptatibus dolore voluptates repellat mollitia rem enim beatae saepe, magnam eveniet quis laborum ex repudiandae illo tempora iusto natus!</p>
+                        <h2>Introduction</h2>
+                        <p>My goal is to work on a product that makes the world a better place at a company that puts work above status.</p>
                     </div>
                 </div>
 
