start by copying a section

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,21 @@
                         <a href="https://github.com/bcuz/kamra">See Code</a>
                     </div>
                 </div>
+        </section>
+        <section class="projects">
+            <h2>Landing Pages</h2>
+            <p>For the most part, these involved taking an incomplete page and getting it to look like a mockup. A fun way to get better at CSS because you can learn a lot from the pre-existing code.</p>
+            <div class="wrapper">
+                <div class="project-row">
+                    <div class="project">
+                        <a href="#"><img src="http://placehold.it/1400x750" alt=""></a>
+                        <a href="#">See Code</a>
+                    </div>
+                    <div class="project">
+                        <a href="http://bcuz.github.io/kamra/"><img src="img/karma.png" class="img-responsive" alt=""></a>
+                        <a href="https://github.com/bcuz/kamra">See Code</a>
+                    </div>
+                </div>
                 <div class="project-row">
                     <div class="project">
                         <a href="http://bcuz.github.io/broadway/"><img src="img/before-broad.png" class="img-responsive broadway-before-after" alt=""></a>
