just a heading for now

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,7 @@
             </div>
         </nav>
         <section class="projects">
-            <h2>Landing Pages</h2>
-            <p>For the most part, these involved taking an incomplete page and getting it to look like a mockup. A fun way to get better at CSS because you can learn a lot from the pre-existing code.</p>
+            <h2>JavaScript</h2>
             <div class="wrapper">
                 <div class="project-row">
                     <div class="project">
