add shopping list proj

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="#"><img src="http://placehold.it/1400x750" alt=""></a>
-                        <a href="#">See Code</a>
+                        <a href="https://bcuz.github.io/shopping-list/"><img src="img/shopping-list.png" alt=""></a>
+                        <a href="https://github.com/bcuz/shopping-list">See Code</a>
                     </div>
                 </div>
         </section>
