--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="img/menu.svg" alt="">
                 <h1><a href="index.html">Adam Nawrocki</a></h1>
                 <ul>
-                    <li><a href="index.html" class="name">Adam Nawrocki</a></li>
+                    <li><a href="index.html">Adam Nawrocki</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
