--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
         </div>
     </footer>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
     <script src="js/app.js"></script>
 </body>
