--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
                         <a href="https://github.com/bcuz/kamra">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="#"><img src="http://placehold.it/1400x750" alt=""></a>
-                        <a href="#">See Code</a>
+                        <a href="https://bcuz.github.io/junction/"><img src="img/junction.png" alt=""></a>
+                        <a href="https://github.com/bcuz/junction">See Code</a>
                     </div>
                 </div>
                 <div class="project-row">
