--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, doloribus.</p>
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
@@ -37,6 +38,7 @@
         </section>
         <section class="projects">
             <h2>Landing Pages</h2>
+            <!-- how to just target this paragraph? -->
             <p>For the most part, these involved taking an incomplete page and getting it to look like a mockup. A fun way to get better at CSS because you can learn a lot from the pre-existing code.</p>
             <div class="wrapper">
                 <div class="project-row">
