--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,12 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, doloribus.</p>
+                        <p>Project that uses data from Weather Underground's API</p>
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
                         <a href="https://bcuz.github.io/shopping-list/"><img src="img/shopping-list.png" alt=""></a>
+                        <p>Using jQuery to dynamically manipulate HTML + CSS</p>
                         <a href="https://github.com/bcuz/shopping-list">See Code</a>
                     </div>
                 </div>
