--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="intro-text">
                         <h2>Introduction</h2>
-                        <p>My goal is to work on a product that makes the world a better place at a company that puts work above status.</p>
+                        <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
                     </div>
                 </div>
 
