--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <ul>
                 <li><a href="https://github.com/bcuz">Github</a></li>
                 <li><a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0">LinkedIn</a></li>
+                <li><a href="mailto:adam.nawroc@gmail.com">Email</a></li>
             </ul>
         </div>
     </footer>
