--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,9 @@
         <footer>
         <div class="wrapper">
             <ul>
-                <li><a href="https://github.com/bcuz">Github</a></li>
-                <li><a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0">LinkedIn</a></li>
+                <li><a href="https://github.com/bcuz"><img src="img/github.png" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/pub/adam-nawrocki/b4/b60/1b0"><img src="img/linkedin.png" alt=""></a></li>
+                <li><a href="mailto:adam.nawroc@gmail.com"><img src="img/email.png" alt=""></a></li>
             </ul>
         </div>
     </footer>
