--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="img/puzzle.jpg" alt="">
                     </div>
                     <div class="intro-text">
-                        <h2>Introduction</h2>
+                        <h2>Objective</h2>
                         <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
                     </div>
                 </div>
