--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <section class="location wrapper">
                 <div class="author-location">
                     <div class="location-text">
-                        <h2>Where I'm From</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet quam provident doloremque, nisi perspiciatis qui fugiat.
-                        </p>
+                        <h2>About Me</h2>
+                        <p>I like teaching and constantly improving. I spend my free time reading, working on jigsaw puzzles, and playing tennis.</p>
                     </div>
                     <div class="location-image">
                         <img src="img/mitten.png" alt="">
