--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="author-location">
                     <div class="location-text">
                         <h2>About Me</h2>
-                        <p>I like teaching and constantly improving. I spend my free time reading, working on jigsaw puzzles, and playing tennis.</p>
+                        <p>I like teaching and constantly improving. I spend my free time reading,  playing tennis, and working on jigsaw puzzles.</p>
                     </div>
                     <div class="location-image">
                         <img src="img/mitten.png" alt="">
