--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,13 @@
                         <a href="https://github.com/bcuz/shopping-list">See Code</a>
                     </div>
                 </div>
+                <div class="project-row">
+                    <div class="project">
+                        <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
+                        <p>Project that uses data from Weather Underground's API</p>
+                        <a href="https://github.com/bcuz/api">See Code</a>
+                    </div>
+                </div>
         </section>
         <section class="projects">
             <h2>Landing Pages</h2>
