--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Project that uses data from Weather Underground's API</p>
-                        <a href="https://github.com/bcuz/api">See Code</a>
+                        <a href="#"><img src="img/extension.png" alt=""></a>
+                        <p>I help maintain/develop an extension Codecademy Advisors use to speed up workflow</p>
+                        <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/overview">See Code</a>
                     </div>
                 </div>
                 <div class="project-row">
