--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="#"><img src="img/extension.png" alt=""></a>
+                        <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
                         <p>I help maintain/develop an extension Codecademy Advisors use to speed up workflow</p>
                         <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                     </div>
