--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="project">
                         <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
-                        <p>I help maintain/develop an extension Codecademy Advisors use to speed up workflow</p>
+                        <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
                         <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                     </div>
                 </div>
