might need wrappers sperated later

--- a/index.html
+++ b/index.html
@@ -27,31 +27,32 @@
             <a href="portfolio.html" class="btn">View Portfolio</a>
         </div>
     </header>
-        <section class="location wrapper">
-                <div class="author-location">
-                    <div class="location-text">
-                        <h2>About Me</h2>
-                        <p>I like teaching and constantly improving. I spend my free time reading,  playing tennis, and putting together jigsaw puzzles.</p>
-                    </div>
-                    <div class="location-image">
-                        <img src="img/mitten.png" alt="">
+        <section class="location">
+                <div class="wrapper">
+                    <div class="author-location">
+                        <div class="location-text">
+                            <h2>About Me</h2>
+                            <p>I like teaching and constantly improving. I spend my free time reading,  playing tennis, and putting together jigsaw puzzles.</p>
+                        </div>
+                        <div class="location-image">
+                            <img src="img/mitten.png" alt="">
+                        </div>
                     </div>
                 </div>
         </section>
 
-        <section class="intro wrapper">
-
-                <div class="author-intro">
-                    <div class="intro-image">
-                        <img src="img/puzzle.jpg" alt="">
-                    </div>
-                    <div class="intro-text">
-                        <h2>Objective</h2>
-                        <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
+        <section class="intro">
+                <div class="wrapper">
+                    <div class="author-intro">
+                        <div class="intro-image">
+                            <img src="img/puzzle.jpg" alt="">
+                        </div>
+                        <div class="intro-text">
+                            <h2>Objective</h2>
+                            <p>My goal is to improve a product that is moving the world forward at a place that puts work above status.</p>
+                        </div>
                     </div>
                 </div>
-
-
         </section>
     <footer>
         <div class="wrapper">
