add port stuff to main

--- a/index.html
+++ b/index.html
@@ -40,7 +40,22 @@
                     </div>
                 </div>
         </section>
-
+        <section class="projects">
+            <h2>Portfolio</h2>
+            <div class="wrapper">
+                <div class="project-row">
+                    <div class="project">
+                        <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
+                        <p>Using data from Weather Underground's API to display data from the selected city</p>
+                        <a href="https://github.com/bcuz/api">See Code</a>
+                    </div>
+                    <div class="project">
+                        <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
+                        <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
+                        <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
+                    </div>
+                </div>
+        </section>
         <section class="intro">
                 <div class="wrapper">
                     <div class="author-intro">
