start button add

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                         <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                     </div>
                 </div>
+                <div class="row">
+                    <!-- adding border makes the page jutter a little -->
+                    <a href="portfolio.html" class="btn">View Portfolio</a>
+                </div>
         </section>
         <section class="intro">
                 <div class="wrapper">
