--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                     </div>
                 </div>
-                <div class="row">
+                <div class="btn-row">
                     <!-- adding border makes the page jutter a little -->
                     <a href="portfolio.html" class="btn">View Portfolio</a>
                 </div>
