edit port button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="btn-row">
                     <!-- adding border makes the page jutter a little -->
-                    <a href="portfolio.html" class="btn">View Portfolio</a>
+                    <a href="portfolio.html" class="btn">View Full Portfolio</a>
                 </div>
         </section>
         <section class="intro">
