--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li><a href="index.html">Adam Nawrocki</a></li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                 </ul>
             </div>
         </nav>
