change txt repat

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Using data from Weather Underground's API to display data from the selected city</p>
+                        <p>Using data from Weather Underground's API to display info for the selected city</p>
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
