--- a/portfolio.html
+++ b/portfolio.html
@@ -27,20 +27,20 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Using data from Weather Underground's API to display info for the selected city</p>
+                        <p>Project that uses data from Weather Underground's API</p>
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
-                    <div class="project">
-                        <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
-                        <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
-                        <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
-                    </div>
-                </div>
-                <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/shopping-list/"><img src="img/shopping-list.png" alt=""></a>
                         <p>Using jQuery to dynamically manipulate HTML + CSS</p>
                         <a href="https://github.com/bcuz/shopping-list">See Code</a>
+                    </div>
+                </div>
+                <div class="project-row">
+                    <div class="project">
+                        <a href="click-for-feature-testimonials"><img src="img/extension.png" class="extension" alt=""></a>
+                        <p>I help maintain/develop an extension that Codecademy Advisors use to speed up workflow</p>
+                        <a href="https://bitbucket.org/walom8868/codecademy-advisortoolbox/">See Code</a>
                     </div>
                 </div>
         </section>
