shorten about me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="author-location">
                         <div class="location-text">
                             <h2>About Me</h2>
-                            <p>I like teaching and constantly improving. I spend my free time reading,  playing tennis, and putting together jigsaw puzzles.</p>
+                            <p>I like teaching and constantly improving. I spend my free time reading and playing tennis.</p>
                         </div>
                         <div class="location-image">
                             <img src="img/mitten.png" alt="">
