--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
-                        <p>Project that uses data from Weather Underground's API</p>
+                        <p>Using data from Weather Underground's API </p>
                         <a href="https://github.com/bcuz/api">See Code</a>
                     </div>
                     <div class="project">
