--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script> -->
     <script src="js/app.js"></script>
 </body>
 
