--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="project">
                         <a href="https://bcuz.github.io/shopping-list/"><img src="img/shopping-list.png" alt=""></a>
-                        <p>Using jQuery to dynamically manipulate HTML + CSS</p>
+                        <p>Using jQuery to manipulate dynamically created elements</p>
                         <a href="https://github.com/bcuz/shopping-list">See Code</a>
                     </div>
                 </div>
