--- a/portfolio.html
+++ b/portfolio.html
@@ -56,8 +56,8 @@
             <div class="wrapper">
                 <div class="project-row">
                     <div class="project">
-                        <a href="http://bcuz.github.io/kamra/"><img src="img/karma.png" class="img-responsive" alt=""></a>
-                        <a href="https://github.com/bcuz/kamra">See Code</a>
+                        <a href="http://bcuz.github.io/karma/"><img src="img/karma.png" class="img-responsive" alt=""></a>
+                        <a href="https://github.com/bcuz/karma">See Code</a>
                     </div>
                     <div class="project">
                         <a href="https://bcuz.github.io/junction/"><img src="img/junction.png" alt=""></a>
