--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <div class="wrapper">
                 <div class="project-row">
                     <div class="project">
-                        <a href="http://bcuz.github.io/karma/"><img src="img/karma.png" class="img-responsive" alt=""></a>
+                        <a href="http://bcuz.github.io/karma/"><img src="img/karma-b.png" class="img-responsive" alt=""></a>
                         <a href="https://github.com/bcuz/karma">See Code</a>
                     </div>
                     <div class="project">
@@ -63,16 +63,14 @@
                         <a href="https://github.com/bcuz/junction">See Code</a>
                     </div>
                 </div>
-                <div class="project-row">
                     <div class="project">
                         <a href="http://bcuz.github.io/broadway/"><img src="img/broadway.png" class="img-responsive broadway-before-after" alt=""></a>
                         <a href="https://github.com/bcuz/broadway">See Code</a>
                     </div>
                     <div class="project">
-                        <a href="http://bcuz.github.io/bestbite2/"><img src="img/bestbite.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
+                        <a href="http://bcuz.github.io/bestbite2/"><img src="img/bestbite-b.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
                         <a href="https://github.com/bcuz/bestbite2" target="_blank">See Code</a>
                     </div>
-                </div>
             </div>
         </section>
         <footer>
