--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,15 @@
                 <div class="project-row">
                     <div class="project">
                         <a href="http://bcuz.github.io/karma/"><img src="img/karma-b.png" class="img-responsive" alt=""></a>
+                        <a href="#">See Code</a>
                         <a href="http://bcuz.github.io/broadway/"><img src="img/broadway.png" class="img-responsive broadway-before-after" alt=""></a>
+                        <a href="#">See Code</a>
                     </div>
                     <div class="project">
                         <a href="https://bcuz.github.io/junction/"><img src="img/junction.png" alt=""></a>
+                        <a href="#">See Code</a>
                         <a href="http://bcuz.github.io/bestbite2/"><img src="img/bestbite-b.png" class="img-responsive bestbite-before" alt="" target="_blank"></a>
+                        <a href="#">See Code</a>
                     </div>
                 </div>
             </div>
