--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <div class="wrapper">
                 <div class="project-row">
                     <div class="project">
-                        <!-- 620x470 -->
+                        <!-- 620x470 on paint -->
                         <a href="https://bcuz.github.io/api/"><img src="img/api.png" alt=""></a>
                         <p>Using data from Weather Underground's API </p>
                         <a href="https://github.com/bcuz/api">See Code</a>
@@ -55,8 +55,10 @@
             <div class="wrapper">
                 <div class="project-row">
                     <div class="project">
+                        <!-- 620x550 pinta -->
                         <a href="http://bcuz.github.io/karma/"><img src="img/karma-b.png" class="img-responsive" alt=""></a>
                         <a href="#">See Code</a>
+                        <!-- 1165 x 750 on paint -->
                         <a href="http://bcuz.github.io/broadway/"><img src="img/broadway.png" class="img-responsive broadway-before-after" alt=""></a>
                         <a href="#">See Code</a>
                     </div>
